<resources>
    <string name="app_name">My Application</string>
    <string name="mybackgroundimage">background_image</string>
    <string name="mailtext">mailtext</string>
    <string name="sign">Sign in</string>
    <string name="mail_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_main__menu">main_Menu</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="UsersString">Users</string>
    <string name="PageString">Page 2</string>


    <string name="page2">Page2</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="albums">Albums</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="media">Media</string>

</resources>
